syntax = "proto3";
message UpdatePoints {
  int32 score = 1; // null
}